# fictional-travelevator

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  auth.py  destinations.py  itineraries.py  users.py
backend/app/models/: __init__.py  activities.py  activity.py  destination.py  destinations.py  itinerary.py  user.py
backend/app/scripts/: __init__.py  data_populator.py  data_scraper.py  data_scraper_populator.py  fetcher.py  itinerary_generator.py  main.py  pipeline.py
backend/app/services/: __init__.py  llm_service.py  supabase_client.py  vector_store.py
backend/app/utils/: security.py
backend/models/: itinerary.py
backend/routes/user/: user_auth.py
backend/tests/: test_api.py  test_services.py
frontend/: bun.lockb  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ItineraryForm.tsx  ItineraryList.tsx  Login.tsx  Register.tsx
frontend/hooks/: useItineraryApi.ts  useSupabaseAuth.ts
