[tool.poetry]
name = "fictional-travelator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.2"}
pydantic = {extras = ["email"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
supabase = "^2.7.3"
langchain-ollama = "^0.1.3"
langchain = "^0.2.15"
scrapy = "^2.11.2"
geopy = "^2.4.1"
chromadb = "^0.5.5"
pyjwt = "^2.9.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
